--- a/currency-exchange-service.properties
+++ b/currency-exchange-service.properties
@@ -1,5 +1,6 @@
 server.port=8000
 spring.jpa.show-sql=true  
-spring.h2.console.enabled=true  
-spring.datasource.platform=h2  
-spring.datasource.url=jdbc:h2:mem:javatpoint  
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+#spring.datasource.platform=h2  
+#spring.datasource.url=jdbc:h2:mem:javatpoint  
